Adjusted the CSS Grid for the header so that there aren't any weird wrapping or colisions when you adjust the screen size. Adjusted the vertical padding on the header and the navigation hover. Hover no longer pushes header down slightly.

--- a/themes/mportfolio/static/css/layout.css
+++ b/themes/mportfolio/static/css/layout.css
@@ -23,7 +23,7 @@ footer { grid-area: footer; }
 @media screen and (min-width: 43.75rem) { /* 700px */
 	.banner-wrapper {
 			display: grid;
-			grid-template-columns: 1fr 1.25fr;
+			grid-template-columns: 1fr 1fr;
 			grid-template-areas:
 			"logo-title global-nav"
 			;
