--- a/themes/mportfolio/static/css/styles.css
+++ b/themes/mportfolio/static/css/styles.css
@@ -10,12 +10,13 @@ body {
 .banner-wrapper {
 	background-color: #f5f5f5;
 	color:  #333;
-	padding: .25rem .85rem;
+	padding: .5rem .85rem;
 }
 
 
 /* Logo and Logo Text */
 .logo-title {
+	font-size: 2rem;
 	font-weight: 400;
 }
 
@@ -64,6 +65,7 @@ nav a:visited {
 
 nav a:hover {
 	border-bottom: 3px solid #1c7ab5;
+	padding-bottom: 2px;
 }
 
 /* Home Page */
@@ -100,9 +102,15 @@ footer {
 }
 
 @media screen and (min-width: 43.75rem) { /* 700px */
+
+/* Logo and Logo Text */
+	.logo-title {
+		font-size: 2.5rem;
+	}
+
 /* Global Navigation */
   nav ul {
-  	padding-top: 1.25rem;
+  	padding-top: .5rem;
   	text-align: right;
   }
 
@@ -114,13 +122,9 @@ footer {
 /* Home Page */
 	.home-page { min-height: 32rem; }
 
-	.refresh {
-	font-size: 3rem;
-  }
+	.refresh { font-size: 3rem; }
 
-	.home-statement {
-		font-size: 2.5rem;
-	}
+	.home-statement { font-size: 2.5rem; }
 
 /* Single and Listing Pages */
 	.single-page,
